cluster/infra/observability/grafana/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: observability
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'grafana.talos.${DOMAIN_NAME}' ]

  parentRefs:
    - name: envoy
      namespace: envoy-system
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
